String isblank() elaborated